--- a/src/components/tables/searchTable/table.css
+++ b/src/components/tables/searchTable/table.css
@@ -53,7 +53,10 @@
 
 
 .table {
-  width: 100%;
+  /* width: 100%; */
+  width: -webkit-fill-available;
+  width: -moz-available;
+  width: fill-available;
   border: 1px solid #dcdfe8;
   border-radius: 10px;
   overflow: hidden;
@@ -65,6 +68,13 @@
   text-align: center;
 }
 
+.table__container--area {
+  display: block;
+  overflow-x: auto;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  width: fill-available;
+}
 
 .table thead {
   background: #f4f5fa;
@@ -137,17 +147,4 @@
 
 .link {
   display: contents;
-}
-
-@media (max-width: 599.98px) {
-  .table {
-    overflow-x: auto;
-    display: block;
-  }
-
-  .table__container {    
-    /* overflow-y: unset; */
-    overflow-x: auto;
-  }
-
 }
